tests/ui/cast_slice_different_sizes/lib.stderr
error: casts between raw pointers to slices with different element sizes
  --> tests/ui/cast_slice_different_sizes/lib.rs:5:13
   |
LL |     let p = &a as *const [u8] as *const [u32];
   |             -----------------^^^^^^^^^^^^^^^^
   |             |
   |             cast from this
   |
   = note: casting a pointer to a slice of type `u8` to a pointer to a slice of another type `u32` with different element type ABI, size or alignment can lead to undefined behavior.
   = note: `#[deny(rpl::cast_slice_different_sizes)]` on by default

error: aborting due to 1 previous error

